--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
     "async": "^0.9.0",
+    "highlight.js": "^8.4.0",
     "jade": "^1.9.2",
+    "js-yaml": "^3.2.7",
     "moment": "2.3.x",
     "typogr": "0.5.x",
     "underscore": "1.4.x",
-    "vizdown": "https://github.com/doubleshow/vizdown/archive/excel.zip"
+    "vizdown": "git://github.com/doubleshow/vizdown"
   },
   "repository": "none"
 }
